--- a/DM2023-Lab1-Master.ipynb
+++ b/DM2023-Lab1-Master.ipynb
@@ -397,7 +397,7 @@
     }
    ],
    "source": [
-    "twenty_train.target[0]"
+    "twenty_train.target[0]\n"
    ]
   },
   {
@@ -840,7 +840,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -855,7 +855,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -864,7 +864,7 @@
        "2257"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -875,7 +875,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -921,7 +921,7 @@
        "1  From: ani@ms.uky.edu (Aniruddha B. Deglurkar) ..."
       ]
      },
-     "execution_count": 15,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -932,7 +932,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
@@ -966,7 +966,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -976,7 +976,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -993,7 +993,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
@@ -1113,7 +1113,7 @@
        "9                 sci.med  "
       ]
      },
-     "execution_count": 19,
+     "execution_count": 27,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1152,7 +1152,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
@@ -1249,7 +1249,7 @@
        "9  From: libman@hsc.usc.edu (Marlena Libman) Subj...                 sci.med"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 28,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1275,7 +1275,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
@@ -1395,7 +1395,7 @@
        "2256                 sci.med  "
       ]
      },
-     "execution_count": 21,
+     "execution_count": 29,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1413,7 +1413,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
@@ -1433,7 +1433,7 @@
        "Name: text, dtype: object"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 30,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1452,7 +1452,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
@@ -1471,7 +1471,7 @@
        "Name: text, dtype: object"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 31,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1491,11 +1491,152 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 140,
+   "execution_count": 48,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>text</th>\n",
+       "      <th>category</th>\n",
+       "      <th>category_name</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>From: djohnson@cs.ucsd.edu (Darin Johnson) Sub...</td>\n",
+       "      <td>3</td>\n",
+       "      <td>soc.religion.christian</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>From: s0612596@let.rug.nl (M.M. Zwart) Subject...</td>\n",
+       "      <td>3</td>\n",
+       "      <td>soc.religion.christian</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>From: stanly@grok11.columbiasc.ncr.com (stanly...</td>\n",
+       "      <td>3</td>\n",
+       "      <td>soc.religion.christian</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2252</th>\n",
+       "      <td>From: roos@Operoni.Helsinki.FI (Christophe Roo...</td>\n",
+       "      <td>2</td>\n",
+       "      <td>sci.med</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2253</th>\n",
+       "      <td>From: mhollowa@ic.sunysb.edu (Michael Holloway...</td>\n",
+       "      <td>2</td>\n",
+       "      <td>sci.med</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2254</th>\n",
+       "      <td>From: sasghm@theseus.unx.sas.com (Gary Merrill...</td>\n",
+       "      <td>2</td>\n",
+       "      <td>sci.med</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2255</th>\n",
+       "      <td>From: Dan Wallach &lt;dwallach@cs.berkeley.edu&gt; S...</td>\n",
+       "      <td>2</td>\n",
+       "      <td>sci.med</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2256</th>\n",
+       "      <td>From: dyer@spdcc.com (Steve Dyer) Subject: Re:...</td>\n",
+       "      <td>2</td>\n",
+       "      <td>sci.med</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>2257 rows × 3 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                                                   text  category  \\\n",
+       "0                                                     0         0   \n",
+       "1                                                     0         0   \n",
+       "2     From: djohnson@cs.ucsd.edu (Darin Johnson) Sub...         3   \n",
+       "3     From: s0612596@let.rug.nl (M.M. Zwart) Subject...         3   \n",
+       "4     From: stanly@grok11.columbiasc.ncr.com (stanly...         3   \n",
+       "...                                                 ...       ...   \n",
+       "2252  From: roos@Operoni.Helsinki.FI (Christophe Roo...         2   \n",
+       "2253  From: mhollowa@ic.sunysb.edu (Michael Holloway...         2   \n",
+       "2254  From: sasghm@theseus.unx.sas.com (Gary Merrill...         2   \n",
+       "2255  From: Dan Wallach <dwallach@cs.berkeley.edu> S...         2   \n",
+       "2256  From: dyer@spdcc.com (Steve Dyer) Subject: Re:...         2   \n",
+       "\n",
+       "               category_name  \n",
+       "0                          0  \n",
+       "1                          0  \n",
+       "2     soc.religion.christian  \n",
+       "3     soc.religion.christian  \n",
+       "4     soc.religion.christian  \n",
+       "...                      ...  \n",
+       "2252                 sci.med  \n",
+       "2253                 sci.med  \n",
+       "2254                 sci.med  \n",
+       "2255                 sci.med  \n",
+       "2256                 sci.med  \n",
+       "\n",
+       "[2257 rows x 3 columns]"
+      ]
+     },
+     "execution_count": 48,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "#Answer here"
+    "#Answer here\n",
+    "a=X\n",
+    "a[['text', 'category']] = a[['category', 'text']]\n",
+    "\n",
+    "b=X\n",
+    "b[:2]=0\n",
+    "\n",
+    "b.loc[:5,'text']\n",
+    "b"
    ]
   },
   {
@@ -1515,20 +1656,92 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 55,
    "metadata": {
     "scrolled": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>text</th>\n",
+       "      <th>category</th>\n",
+       "      <th>category_name</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>From: aldridge@netcom.com (Jacquelin Aldridge)...</td>\n",
+       "      <td>2</td>\n",
+       "      <td>sci.med</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>49</th>\n",
+       "      <td>From: jimj@contractor.EBay.Sun.COM (Jim Jones)...</td>\n",
+       "      <td>2</td>\n",
+       "      <td>sci.med</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>82</th>\n",
+       "      <td>From: jason@ab20.larc.nasa.gov (Jason Austin) ...</td>\n",
+       "      <td>2</td>\n",
+       "      <td>sci.med</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>118</th>\n",
+       "      <td>From: rogers@calamari.hi.com (Andrew Rogers) S...</td>\n",
+       "      <td>2</td>\n",
+       "      <td>sci.med</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>142</th>\n",
+       "      <td>From: lady@uhunix.uhcc.Hawaii.Edu (Lee Lady) S...</td>\n",
+       "      <td>2</td>\n",
+       "      <td>sci.med</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                                                  text  category category_name\n",
+       "7    From: aldridge@netcom.com (Jacquelin Aldridge)...         2       sci.med\n",
+       "49   From: jimj@contractor.EBay.Sun.COM (Jim Jones)...         2       sci.med\n",
+       "82   From: jason@ab20.larc.nasa.gov (Jason Austin) ...         2       sci.med\n",
+       "118  From: rogers@calamari.hi.com (Andrew Rogers) S...         2       sci.med\n",
+       "142  From: lady@uhunix.uhcc.Hawaii.Edu (Lee Lady) S...         2       sci.med"
+      ]
+     },
+     "execution_count": 55,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# Answer here"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "---"
+    "# Answer here\n",
+    "ans=X\n",
+    "k=ans[ans['category_name']=='sci.med']\n",
+    "k1=k[::10]\n",
+    "k1[:5]"
    ]
   },
   {
@@ -1811,33 +2024,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 58,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "0       (The amoung of missing records is: , 0)\n",
-       "1       (The amoung of missing records is: , 0)\n",
-       "2       (The amoung of missing records is: , 0)\n",
-       "3       (The amoung of missing records is: , 0)\n",
-       "4       (The amoung of missing records is: , 0)\n",
-       "                         ...                   \n",
-       "2252    (The amoung of missing records is: , 0)\n",
-       "2253    (The amoung of missing records is: , 0)\n",
-       "2254    (The amoung of missing records is: , 0)\n",
-       "2255    (The amoung of missing records is: , 0)\n",
-       "2256    (The amoung of missing records is: , 0)\n",
-       "Length: 2257, dtype: object"
-      ]
-     },
-     "execution_count": 29,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0       The amoung of missing records is: 0\n",
+      "1       The amoung of missing records is: 0\n",
+      "2       The amoung of missing records is: 0\n",
+      "3       The amoung of missing records is: 0\n",
+      "4       The amoung of missing records is: 0\n",
+      "                       ...                 \n",
+      "2252    The amoung of missing records is: 0\n",
+      "2253    The amoung of missing records is: 0\n",
+      "2254    The amoung of missing records is: 0\n",
+      "2255    The amoung of missing records is: 0\n",
+      "2256    The amoung of missing records is: 0\n",
+      "Name: Missing, Length: 2257, dtype: object\n"
+     ]
     }
    ],
    "source": [
-    "# Answer here"
+    "missing = X.isnull().any(axis=1)\n",
+    "count = missing.sum()\n",
+    "X['Missing'] = f\"The amoung of missing records is: {count}\"\n",
+    "ans=X['Missing']\n",
+    "\n",
+    "print(ans)"
    ]
   },
   {
@@ -2430,7 +2645,13 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Answer here\n"
+    "# Answer here\n",
+    "# 0. np.nan is a syntax for missing value\n",
+    "# 1. There is no such column so it's also a missing value\n",
+    "# 2. The NaN here is in string type, so the NaN stands for the word not a condition.\n",
+    "# 3. The None here is in string type, so the NaN stands for the word not a condition.\n",
+    "# 4. The None here is not a string, so it stands for condition.\n",
+    "# 5. There is a string area here, so it con"
    ]
   },
   {
